# HC-MC

./: .clang-tidy  .gitignore  .repomixignore  AAA.cpp  AAA.hpp  CMakeLists.txt  README.md  build.sh  clang-tidy-report.txt  repomix-output.txt  vcpkg.json
.cache/clangd/index/: HC-MC.hpp.20135EB21962522E.idx  HC-MC.hpp.7E46594CC8C84F4A.idx  HC-MC.hpp.9BCA9635471B5E28.idx  HC-MC.hpp.E7BF692574F62215.idx  ODESystem.hpp.2975D8CB0827A6E4.idx  hbtaylor.hpp.A52379EA2C652BFB.idx  integration_interface.hpp.3B7FE113FDBBE29A.idx  main.cpp.337216E64C16DEA8.idx  pt_tests.cpp.10FBF5051F3567F2.idx  pt_tests.cpp.50B8EBEFB271F1AF.idx  pt_tests.cpp.74464087CE61BBDD.idx  pt_tests.cpp.EF6D525D7FF52801.idx  types.hpp.33DAD05077442320.idx
cmake/: clang_format.cmake  clang_tidy.cmake  compiler_options.cmake  cppcheck.cmake
examples/: time_derivatives.cpp
project/: CMakeLists.txt
project/HC-MC/: CMakeLists.txt  main.cpp  oldermaincpp.txt  oldmaincpp.txt
project/HC-MC/include/: AAA.hpp  HC-MC.hpp  ODESystem.hpp  eigenwrap.hpp  hbtaylor.hpp  integration_interface.hpp  mpreal.h  observability.hpp  prob1.hpp  types.hpp
project/HC-MC/tests/: pt_tests.cpp
